--- a/style.css
+++ b/style.css
@@ -32,11 +32,11 @@ nav ul li a {
     font-size: 20px;
     text-decoration: none;
     font-weight: bold;
-    color: #444;
+    color: #23629e;
     border-radius: 10px;
 }
 nav ul li a:hover {
-	background: #FFF;
+	background: #b04bc0;
 }
 nav ul li {
     display: inline-block;
