--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ body,html {
 }
 header {
     background: #FFFFFF;
-    padding: 30px 20px;
-    max-width: 1500px;
+    padding: 20px 30px;
+    max-width: 940px;
+    margin: auto;
 }
 nav {
     display: inline-block;
@@ -39,7 +40,7 @@ nav ul li a:hover {
 }
 nav ul li {
     display: inline-block;
-    margin: 50px;
+    margin: 20px;
 }
 nav ul {
     list-style: none;
