--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body,html {
 header {
 	margin: auto;
     background: #FFFFFF;
-    padding: 20px 30px;
+	padding: 25px 0px 0px 0px;
     max-width: 2000px;
 }
 nav {
