--- a/style.css
+++ b/style.css
@@ -18,6 +18,15 @@ body,html {
 	background-color: #FFF;
 }
 header {
+		margin: auto;
+
+    background: #FFFFFF;
+	padding: 25px 20px 0px 20px;
+    max-width: 2000px;
+}
+header2 {
+		margin: auto;
+
     background: #FFFFFF;
 	padding: 25px 20px 0px 20px;
     max-width: 2000px;
