--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ header {
 section {
 		margin: auto;
 
-    background: #000000;
-	padding: 25px 20px 0px 20px;
+    background: #ffffff;
+	padding: 0px 0px 0px 0px;
     max-width: 2000px;
 }
 nav {
