--- a/style.css
+++ b/style.css
@@ -24,11 +24,11 @@ header {
         max-width: 2000px;
 }
 section {
-		margin: auto;
-
-    background: #ffffff;
+	font-size: 40px;
+	margin: auto;
+        background: #ffffff;
 	padding: 0px 0px 0px 0px;
-    max-width: 2000px;
+        max-width: 2000px;
 }
 nav {
     display: inline-block;
