--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
 }
 section {
 	font-size: 40px;
+	color: #23629e;
 	margin: auto;
         background: #ffffff;
 	padding: 0px 0px 0px 0px;
