--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
 	/*margin: auto;*/
         background: #FFFFFF;
 	/*padding: 25px 20px 0px 20px;*/
-        max-width: 2000px;
+        /*max-width: 2000px;*/
 }
 
 h1 {
