--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
 body{line-height:1; font-family: arial;}
-h1{font-size: 25px;}h2{font-size: 21px;}h3{font-size: 18px;}h4{font-size: 16px;}
+h2{font-size: 21px;}h3{font-size: 18px;}h4{font-size: 16px;}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
 nav ul{list-style:none}
 blockquote,q{quotes:none}
@@ -25,31 +25,8 @@ header {
 }
 
 h1 {
-	color: #b04bc0;
 }
 
-nav {
-    display: inline-block;
-}
-nav ul li a {
-    background: #23629e;
-    padding: 2px 10px;
-    font-size: 20px;
-    text-decoration: none;
-    font-weight: bold;
-    color: #FFFFFF;
-    border-radius: 5px;
-}
-nav ul li a:hover {
-	background: #b04bc0;
-}
-nav ul li {
-    display: inline-block;
-    margin: 10px;
-}
-nav ul {
-    list-style: none;
-}
 
 main {
 	float: left;
