--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
 body{line-height:1; font-family: arial;}
-h2{font-size: 21px;}h3{font-size: 18px;}h4{font-size: 16px;}
+h3{font-size: 18px;}h4{font-size: 16px;}
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
 nav ul{list-style:none}
 blockquote,q{quotes:none}
@@ -83,11 +83,14 @@ aside > div {
     font-size: 30px;
     margin-right: 75px;
     color: #FFF;
+	    background-color: transparent;
+
 }
 #logo img {
     width: 50px;
     vertical-align: middle;
     margin-right: 10px;
+    background-color: transparent;
 }
 body > section {
     max-width: 2000px;
